--- a/.github/workflows/build-binary-image-release.yaml
+++ b/.github/workflows/build-binary-image-release.yaml
@@ -25,10 +25,9 @@ jobs:
       - name: Build with Maven
         run: |
           mvn -B package --file pom.xml
-          ./target
 
       - name: Upload binary
         uses: actions/upload-artifact@v4
         with:
           name: sigma-${{ matrix.os }}
-          path: sigma*
+          path: ./target/sigma*
