--- a/.github/workflows/build-binary-image-release.yaml
+++ b/.github/workflows/build-binary-image-release.yaml
@@ -6,15 +6,18 @@ on:
       - v*
 
 jobs:
-  build:
+  release:
     name: SIGMA on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
     steps:
-      - uses: actions/checkout@v4
-      - uses: graalvm/setup-graalvm@v1
+      - name: Checkout repository.
+        uses: actions/checkout@v4
+
+      - name: Setup jdk.
+        uses: graalvm/setup-graalvm@v1
         with:
           java-version: '21'
           distribution: 'graalvm'
@@ -22,12 +25,28 @@ jobs:
           native-image-job-reports: 'true'
           cache: maven
 
-      - name: Build with Maven
+      - name: Build with Maven.
         run: |
-          mvn -B package --file pom.xml
+          run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+          mvn -Pnative -DskipTests package
 
-      - name: Upload binary
+      - name: Upload binary.
         uses: actions/upload-artifact@v4
         with:
           name: sigma-${{ matrix.os }}
-          path: ./target/sigma*
+          path: | 
+            ./target/binary/sigma*
+            ./target/classes/sigma.json
+            ./target/classes/options.json
+
+      - name: Create release.
+        uses: softprops/action-gh-release@v2
+        with:
+          body_path: ${{ github.workspace }}-CHANGELOG.txt
+          files: |
+            ./target/binary/sigma*
+            ./target/classes/sigma.json
+            ./target/classes/options.json
+          # note you'll typically need to create a personal access token
+          # with permissions to create releases in the other repo
+          token: ${{ secrets.GITHUB_TOKEN }}
