--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ local.properties
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/*
 
 # Gradle:
 .idea/**/gradle.xml
@@ -188,5 +189,5 @@ nbdist/
 *.pem
 ### cashe ###
 cache/*
-backup/*
+backup/
 log/*
