--- a/.github/workflows/build-binary-image-release.yaml
+++ b/.github/workflows/build-binary-image-release.yaml
@@ -24,11 +24,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           native-image-job-reports: 'true'
           cache: maven
+        run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
 
       - name: Build with Maven.
-        run: |
-          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-          mvn -Pnative -DskipTests package
+        run: mvn -Pnative -DskipTests package
 
       - name: Upload binary.
         uses: actions/upload-artifact@v4
