--- a/.github/workflows/build-binary-image-release.yaml
+++ b/.github/workflows/build-binary-image-release.yaml
@@ -24,7 +24,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           native-image-job-reports: 'true'
           cache: maven
-        run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+
+      - name: Env Check.
+        run: |
+          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
 
       - name: Build with Maven.
         run: mvn -Pnative -DskipTests package
