--- a/.github/workflows/build-binary-image-release.yaml
+++ b/.github/workflows/build-binary-image-release.yaml
@@ -30,11 +30,15 @@ jobs:
 
       - name: Tar package on Unix.
         if: ${{ matrix.os == 'macos-latest' || matrix.os == 'ubuntu-latest' }}
-        run: tar -zvcf ./target/package/sigma_v${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz ./CHANGELOG.txt
+        run: |
+          echo "test" > ./CHANGELOG.txt
+          tar -zvcf ./target/package/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz ./CHANGELOG.txt
 
       - name: Zip package on windows.
         if: ${{ matrix.os == 'windows-latest' }}
-        run: 7z a ./target/package/sigma_v${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip ./CHANGELOG.txt
+        run: |
+          echo "test" > ./CHANGELOG.txt
+          7z a ./target/package/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip ./CHANGELOG.txt
 
       - name: Upload package.
         uses: actions/upload-artifact@v4
