--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,8 @@
                 <buildArg>-H:+ReportExceptionStackTraces</buildArg>
 <!--                <buildArg>-H:IncludeResources=logback.xml.bak</buildArg>-->
               </buildArgs> <!--(4)-->
-              <outputDirectory>${project.build.directory}/binary/</outputDirectory>
+<!--              <outputDirectory>${project.build.directory}/binary/</outputDirectory>-->
+              <outputDirectory>${project.basedir}/bin/</outputDirectory>
             </configuration>
           </plugin>
         </plugins>
