--- a/.github/workflows/build-binary-image-release.yaml
+++ b/.github/workflows/build-binary-image-release.yaml
@@ -31,20 +31,20 @@ jobs:
       - name: Tar package on Unix.
         if: ${{ matrix.os == 'macos-latest' || matrix.os == 'ubuntu-latest' }}
         run: |
-          tar -zvcf ./target/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz ./target/binary/sigma* ./options.json ./sigma.json
+          tar -zvcf ./bin/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz ./bin/sigma* ./options.json ./sigma.json
 
       - name: Zip package on windows.
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          7z a ./target/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip ./target/binary/sigma* ./options.json ./sigma.json
+          7z a ./bin/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip ./bin/sigma* ./options.json ./sigma.json
 
       - name: Upload package.
         uses: actions/upload-artifact@v4
         with:
           name: sigma-${{ matrix.os }}
           path: |
-            ./target/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz
-            ./target/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip
+            ./bin/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz
+            ./bin/sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip
 
       - name: Create release.
         uses: softprops/action-gh-release@v2
