--- a/.gitignore
+++ b/.gitignore
@@ -150,11 +150,10 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-mvnw
-mvnw.cmd
+./mvn/
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
+# !/.mvn/wrapper/maven-wrapper.jar
 
 ### Gradle ###
 .gradle
