--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,8 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 ./mvn/
+mvnw
+mvnw.cmd
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 # !/.mvn/wrapper/maven-wrapper.jar
