--- a/.github/workflows/build-binary-image-release.yaml
+++ b/.github/workflows/build-binary-image-release.yaml
@@ -32,12 +32,12 @@ jobs:
       - name: Tar package on Unix.
         if: ${{ matrix.os == 'macos-latest' || matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest-large'}}
         run: |
-          tar -zvcf ./sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz ./sigma ./options.json ./sigma.json
+          tar -zvcf ./sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.tar.gz ./sigma ./options.json ./sigma.json ./target/sigma-v${{ github.ref_name }}-fat.jar
 
 #      - name: Zip package on windows.
 #        if: ${{ matrix.os == 'windows-latest' }}
 #        run: |
-#          7z a ./sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip ./sigma.exe ./options.json ./sigma.json
+#          7z a ./sigma_${{ github.ref_name }}_${{ runner.os }}_${{ runner.arch }}.zip ./sigma.exe ./options.json ./sigma.json ./target/sigma-v${{ github.ref_name }}-fat.jar
 
       - name: Upload package.
         uses: actions/upload-artifact@v4
