--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
-              <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar
+              <outputFile>${project.build.directory}/${project.artifactId}-v${project.version}-fat.jar
               </outputFile>
             </configuration>
           </execution>
