--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   <licenses>
     <license>
       <name>Apache 2</name>
-      <url>http://www.apache.org/licenses/</url>
+      <url>https://www.apache.org/licenses/</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
